# ur5-vision-control

./: LICENSE  README.md
install/: local_setup.sh  setup.sh
install/ur5_vision_control/share/ur5_vision_control/: package.sh  package.xml
install/ur5_vision_control/share/ur5_vision_control/launch/: full_system.launch.py
log/: latest_build
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/install/ur5_vision_control/lib/ur5_vision_control/: aruco_controller_node
ros2_ws/install/ur5_vision_control/share/ur5_vision_control/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/log/: latest_build
ros2_ws/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/src/install/ur5_vision_control/lib/ur5_vision_control/: click_controller_node
ros2_ws/src/install/ur5_vision_control/share/ur5_vision_control/: package.sh
ros2_ws/src/log/: latest_build
ros2_ws/src/ur5_vision_control/: package.xml  setup.cfg  setup.py
ros2_ws/src/ur5_vision_control/launch/: full_system.launch.py
ros2_ws/src/ur5_vision_control/ur5_vision_control/: aruco_controller_node.py  click_controller_node.py
