<?xml version="1.0"?>
<package format="3">
  <name>ur5_vision_control</name>
  <version>0.0.1</version>
  <description>Vision-based control of UR5 using clicks and ArUco markers.</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- Build type -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>

  <!-- Needed for launch system -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- OpenCV is system-installed, no ROS dep needed -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
